tests/baselines/reference/defaultExportsCannotMerge02.errors.txt
tests/cases/conformance/es6/modules/m1.ts(1,22): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m1.ts(4,18): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m2.ts(1,20): error TS2307: Cannot find module 'm1' or its corresponding type declarations.


==== tests/cases/conformance/es6/modules/m1.ts (2 errors) ====
    export default class Decl {
                         ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
    }
    
    export interface Decl {
                     ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        p1: number;
        p2: number;
    }
    
    export namespace Decl {
        interface I {
        }
    }
    
==== tests/cases/conformance/es6/modules/m2.ts (1 errors) ====
    import Entity from "m1"
                       ~~~~
!!! error TS2307: Cannot find module 'm1' or its corresponding type declarations.
    
    Entity();
    
    var x: Entity;
    var y: Entity.I;
    var z = new Entity();
    var sum = z.p1 + z.p2